deployment/local/01-deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: micro-vehicle-management-tool-deployment
  labels:
    app: micro-vehicle-management-tool
  namespace: track-vehicle-data
spec:
  replicas: 1
  strategy:
   type: "Rolling"
  template:
    metadata:
      labels:
        app: micro-vehicle-management-tool
    spec:
      containers:
        - name: micro-vehicle-management-tool
          image: image-registry.openshift-image-registry.svc:5000/track-vehicle-data/micro-vehicle-management-tool:latest
          imagePullPolicy: Always
          restartPolicy: OnFailure
          readinessProbe:
            httpGet:
              path: /api/v1/monitor/health
              port: 8090
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/monitor/health
              port: 8090
            initialDelaySeconds: 25
            periodSeconds: 20
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 8090
          command:
            - "bin/sh"
            - "-c"
            - "/launcher.sh"
          volumeMounts:
            - name: config-volume
              mountPath: /config
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: local-configmap-micro-vehicle-management-tool
