deployment/local/03-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: micro-vehicle-management-tool-route
  name: micro-vehicle-management-tool-route
  namespace: track-vehicle-data
spec:
  port:
    targetPort: 8090
  to:
    kind: Service
    name: micro-vehicle-management-tool-service
    weight: 100
